cluster/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: prometheus
  labels:
    name: prometheus
spec:
  tls:
    - hosts:
      - prometheus.api.biosimulations.org
  rules:
  - host: prometheus.api.biosimulations.org
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            servicePort: 9090
